compiler/tests/fixtures/valid/expressions_chance.viv
// Chance expression in conditions

action gamble:
    roles:
        @gambler:
            as: initiator
    conditions:
        25%
