compiler/tests/fixtures/invalid/semantics/search_references_undefined_query.viv
// Invalid: search references undefined query

action searcher:
    roles:
        @actor:
            as: initiator
    conditions:
        search query nonexistent:
            over: @actor
